--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3",
     "react-scripts": "1.0.13"
   },
   "dependencies": {
     "html-to-react": "^1.2.11",
+    "immutable": "^3.8.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
@@ -14,6 +21,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "go": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --recursive test/model/ModelLayout.test.js"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
